# conditional-monge-gap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
Notebooks/03_CMonge_results/: Fig. 2D, 2E, Extended Data Fig. 3 - Pathway Enrichment Venn and Bars.ipynb  Figure 3 , Fig. A5 - 4i ID OOD results.ipynb  Figure 3 - 4i ID OOD results.ipynb  Figure 4C - Full sciplex chemCPA and CMonge comparison.ipynb  Figure 4D,  Fig. A11  - CMonge sciplex Source, target, transport UMAPs.ipynb  Figure x - chemCPA sciplex Source, Target, Transport UMAPs.ipynb  Table 1 - ED Tab1+Tab3 - Suppl T2 -  Sciplex Monge (Drug)Dose ID and OOD.ipynb
Notebooks/04_CMonge_manuscript_analyses/: 20241008_4i_drug_embedding_comparison.ipynb
cmonge/models/: nn.py
cmonge/tests/models/: test_attention_pooling.py
cmonge/trainers/: conditional_monge_trainer.py
