[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cmonge"
version = "0.1.3"
description = "Extension of the Monge Gap to learn conditional optimal transport maps"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Alice Driessen", email = "adr@zurich.ibm.com" },
    { name = "Benedek Harsanyi", email = "hben.0204@gmail.com" },
    { name = "Jannis Born", email = "jab@zurich.ibm.com" },
]
keywords = [
    "Machine Learning",
    "Optimal Transport",
    "Neural OT",
    "Monge Gap",
    "Conditional Distribution Learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anndata>=0.10.5.post1,<0.11",
    "chex>=0.1.85,<0.2",
    "dotmap>=1.3.30,<2",
    "flax>=0.10.2,<0.11",
    "jax>=0.4.36,<0.5",
    "jaxlib>=0.4.36,<0.5",
    "loguru>=0.7.2,<0.8",
    "optax>=0.2.4,<0.3",
    "optuna>=3.5.0,<4",
    "ott-jax>=0.5.0,<0.6",
    "pandas>=2.0.0,<3",
    "pyyaml>=6.0",
    "rdkit>=2023.9.5,<2024",
    "scanpy>=1.9.8,<2",
    "scikit-learn>=1.4.0,<2",
    "scipy==1.12.0",
    "seaborn>=0.13.2,<0.14",
    "typer>=0.9.0,<1",
    "umap-learn>=0.5.5,<0.6",
]

[project.urls]
Homepage = "https://github.com/AI4SCR/conditional-monge"
Repository = "https://github.com/AI4SCR/conditional-monge"

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "isort>=5.13.2,<6",
    "pre-commit",
    "pytest",
    "ruff>=0.5.4,<0.6",
    "types-pyyaml>=6.0.12.20240311",
]

[tool.hatch.build.targets.sdist]
include = [
    "/cmonge",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["cmonge"]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/jax_releases.html"]

[tool.ruff]
line-length = 88
lint.select = ["N8"]
